Freimaurertempel verschwunden... warum auch immer

--- a/The Shadow over Innsmouth/chapter3.tex
+++ b/The Shadow over Innsmouth/chapter3.tex
@@ -6,9 +6,9 @@ Man hatte mir versichert, dass der alte Mann nur wilde, unzusammenhängende und 
 
 Mir war bewusst, dass ich ihn nicht hier und jetzt behelligen konnte, denn die Feuerwehrmänner würden dies sicherlich bemerken und etwas einzuwenden haben. Stattdessen, so überlegte ich, würde ich mich vorbereiten indem ich etwas schwarz gebrannten Schnaps besorgen würde von einem Ort, an dem nach den Beschreibungen des Jungen aus dem Laden reichlich davon vorhanden sein sollte. Danach würde ich ganz beiläufig am Feuerwehrhaus herumlungern und mich zum alten Zadok gesellen, nachdem er zu einem seiner häufigen Streifzüge aufgebrochen war. Der Junge hatte erzählt, dass er sehr rastlos war und selten mehr als eine oder zwei Stunden auf einmal vor der Station saß.
 
-Ein Quart Whiskey war einfach, aber nicht billig hinter einem schäbigen Gemischtwarenladen genau hinter dem Platz in der Eliot Street zu beschaffen. Von dem dreckig aussehenden Kerl, der mich dort erwartete, stierte mich ebenfalls ein Hauch des \glqq Innsmouth-Aussehens\grqq an, doch er war auf seine Art recht höflich, wahrscheinlich gewohnt an die Kundschaft geselliger Fremder --- Lastwagenfahrer, Goldkäufer und ä4hnliche Gestalten --- waren gelegentlich in der Stadt.
+Ein Quart Whiskey war einfach, aber nicht billig hinter einem schäbigen Gemischtwarenladen genau hinter dem Platz in der Eliot Street zu beschaffen. Von dem dreckig aussehenden Kerl, der mich dort erwartete, stierte mich ebenfalls ein Hauch des \glqq Innsmouth-Aussehens\grqq an, doch er war auf seine Art recht höflich, wahrscheinlich gewohnt an die Kundschaft geselliger Fremder --- Lastwagenfahrer, Goldkäufer und ähnliche Gestalten --- waren gelegentlich in der Stadt.
 
-Ich betrat den Platz wieder und sah, dass das Glück mir hold war, denn --- aus der Paine Street um die Ecke des Gilman House schlurfend --- erblickte ich nicht weniger als die große, dürre, lumpige Gestalt des alten Zadok Allen selbst. Getreu meines Planes gewann ich seine Aufmerksamkeit indem ich die gerade gekaufte Flasche schwenkte und bald war mir klar, dass er angefangen hatte, mir sehnsüchtig hinterherzuschlurfen als ich in die Waite Street einbog, auf dem Weg in die verlassenste Gegend, die mir einfiel.
+Ich betrat den Platz wieder und sah, dass das Glück mir hold war, denn --- aus der Paine Street um die Ecke des Gilman House schlurfend --- erblickte ich nicht weniger als die große, dürre, lumpige Gestalt des alten Zadok Allen selbst. Getreu meines Planes gewann ich seine Aufmerksamkeit indem ich die gerade gekaufte Flasche schwenkte und bald war mir klar, dass er angefangen hatte, mir sehnsüchtig hinterher zu schlurfen als ich in die Waite Street einbog, auf dem Weg in die verlassenste Gegend, die mir einfiel.
 
 Ich wählte meinen Weg gemäß der Karte, die der Junge aus dem Lebensmittelladen mir angefertigt hatte und wählte ein vollständig aufgegebenes Stück des südlichen Ufers, das ich zuvor besucht hatte, als Ziel. Die einzigen Leute, die dort zu sehen gewesen waren, waren die Angler auf der weit entfernten Mole und noch ein paar Blocks südlich konnte ich aus deren Sichtweite geraten, ein paar Sitzplätze in einer stillgelegten Werft finden und dann den alten Zadok für unbegrenzte Zeit unbeobachtet befragen. Noch bevor ich die Main Street erreichte konnte ich hinter mir ein schwaches und keuchendes \glqq Hey Mister!\grqq  vernehmen und erlaubte es dem alten Mann, mich einzuholen und einige kräftige Schlucke aus der Flasche zu nehmen.
 
@@ -20,7 +20,7 @@ Zum Ende der zweiten Stunde hin fürchtete ich, mein Quart Whiskey würde nicht 
 \glqq Das is' wo's alles angefangen hat --- der verfluchte Ort aller Bosheit wo das tiefe Wasser beginnt. Höllentor --- eine Klippe bis zu deren Grund keine Lotschnur reicht. Der alte Käpt'n Obed hat's getan --- er hat auf'n Südseeinseln mehr rausgefund'n als gut für ihn war.
 
 % venter -- Bauch -> Schiffsbauch? to make a venter -> Einen Schiffsbauch voll Ware umschlagen? -> Geschäfte machen?
-Alle war'n übel dran damals. Handel brach ein, die Fabriken ham' Aufträge verlor'n, sogar die neuen --- un' die besten von unser'n Leuten verlor'n durch Kaperei im Krieg von 1812 oder mit der Brigg Eliza und der alten Schnau Ranger --- beides Gilman-Schiffe. Obed Marsh, er hatte drei Schiffe zu Wasser --- Brigantine \textit{Columby}, Brigg \textit{Hetty} und die Bark \textit{Sumatry Queen}. Er war der einz'ge Käpt'n der Ostindien- und Pazifik-Handel betrieb, obwohl Esdras Martins Barkentine \textit{Malay Pride} da noch Achtundzwanzig Geschäfte gemacht hat.
+Alle war'n übel dran damals. Handel brach ein, die Fabriken ham' Aufträge verlor'n, sogar die neuen --- un' die besten von unser'n Leuten verlor'n durch Kaperei im Krieg von 1812 oder mit der Brigg Eliza und der alten Schnau Ranger --- beides Gilman-Schiffe. Obed Marsh, er hatte drei Schiffe zu Wasser --- Brigantine \textit{Columby}, Brigg \textit{Hetty} und die Bark \textit{Sumatry Queen}. Er war der einz'ge Käpt'n, der Ostindien- und Pazifik-Handel betrieb, obwohl Esdras Martins Barkentine \textit{Malay Pride} da noch Achtundzwanzig Geschäfte gemacht hat.
 
 Aber 's gab keinen wie Käpt'n Obed, den alten Satansbraten! Hehe! Ich kann ihm nich übel nehmen, was er von der Ferne erzählt hat un' wie er die Leute dumm genannt hat, weil sie in die christliche Messe gingen un' ihre Last in Demut und Beschei'nheit getrag'n hab'n! Sagte, die soll'n sich bess're Götter such'n, wie welche von denen auf'n Westinnischen sie ha'n, die wür'n guten Fischfang liefern im Austausch für der'n Opfer un' wür'n wirklich auf Gebete hör'n!
 
@@ -32,7 +32,7 @@ Also, Matt sagte, die Eingebor'nen da hätten all den Fisch gehabt, den sie fang
 
 Das Geflüster des alten Mannes wurde schwächer und ich fand mich selbst erzitternd ob der fürchterlichen und aufrichtigen Ungeheuerlichkeit seines Tonfalls, obwohl ich wusste, dass seine Erzählung nichts als trunkene Fantasie sein kann.
 
-\glqq Also mein Herr, Obed lernte, dass es da Dinge auf dieser Erde gibt, von denen die meist'n Leute nie gehört ha'n --- un' die sie nicht glauben wür'n wenn sie sie hörten. Anscheinend haben diese Kanaken haufenweise ihre jungen Männer und Frau'n geopfert an irgendso 'ne Art Götterwesen die unter'm Meer lebten und ha'n alle möglichen Gefälligkeiten dafür bekommen. Sie haben die Wesen auf der kleinen Insel mit den selstam'n Ruinen getroffen un' anscheinend sollten die furch'baren Bilder von Froschfischmosntern Bilder von denen sein. Vielleicht war'n das die Viecher von denen all die Meerjungfrau'ngeschichten und so weiter entsprungen sind. Die hatten jede Menge Städte am Meeresgrund un' diese Insel war von dort abgehob'n. Anscheinend lebten ein'ge von den Dingern in den Steinbauten als die Insel sich plötzlich an die Oberfläche erhob. So ha'n die Kanaken Wind davon bekommen, dass sie da unten war'n. Hab'n mit Zeichensprache 'n Handel ausgemacht, sobald sie ihre Angst überkomm'n hatten.
+\glqq Also mein Herr, Obed lernte, dass es da Dinge auf dieser Erde gibt, von denen die meist'n Leute nie gehört ha'n --- un' die sie nicht glauben wür'n wenn sie sie hörten. Anscheinend haben diese Kanaken haufenweise ihre jungen Männer und Frau'n geopfert an irgendso 'ne Art Götterwesen die unter'm Meer lebten und ha'n alle möglichen Gefälligkeiten dafür bekommen. Sie haben die Wesen auf der kleinen Insel mit den selstam'n Ruinen getroffen un' anscheinend sollten die furch'baren Bilder von Froschfischmonstern Bilder von denen sein. Vielleicht war'n das die Viecher von denen all die Meerjungfrau'ngeschichten und so weiter entsprungen sind. Die hatten jede Menge Städte am Meeresgrund un' diese Insel war von dort abgehob'n. Anscheinend lebten ein'ge von den Dingern in den Steinbauten als die Insel sich plötzlich an die Oberfläche erhob. So ha'n die Kanaken Wind davon bekommen, dass sie da unten war'n. Hab'n mit Zeichensprache 'n Handel ausgemacht, sobald sie ihre Angst überkomm'n hatten.
 
 Die Dinger mochten Mensch'nopfer! Hatten sie vor Urzeiten, aber ha'n die Oberwelt aus'n Augen verlor'n nach ein'ger Zeit. Was sie den Opfern angetan ha'n kann ich nich' sagen un' ich glaub' Obed war nich' allzu scharf drauf zu fragen. Aber die Heiden war'n einverstanden, weil sie 'ne harte Zeit gehabt hatten und generell verzweifelt war'n. Sie haben zweimal im Jahr den Seedingern eine bestimmte Zahl junge Menschen übergeben --- am Vorabend zum Mai und zu Halloween --- ganz regelmäßig. Ha'n außerdem was von dem geschnitzten Krimskrams, den sie hergestellt haben übergeb'n. Im Ge'nzug ha'n die Dinger jede Menge Fisch geliefert --- ha'n die von überall im Meer herbei getrieben --- un' hier un' da gab's auch so 'n paar von den goldartigen Dingern.
 
@@ -46,13 +46,13 @@ Alle hatten die Idee vom Sterb'n aufgege'n --- außer in Kanu-Krieg'n mit den an
 
 Walakea zeigte Obed eine Menge Riten un' Beschwörungen die mit den Seeviechern zu tun hatten un' hat ihm ein'ge von den Leut'n gezeigt, die sich stark von ihrer Menschenform verändert hatt'n. Irgendwie, obwohl er ihn nie eins von den normalen Dingern aus'm Wasser seh'n ließ. Am Ende gab' er ihm 'n merkwürdiges Dingsbums aus Blei oder so, dass so sagte er, die Fischdinger hervorbringen würde, von je'm Ort im Wasser, wo's ein Nest von denen gäb'. Die Idee war, das zusammen mit den richti'en Gebet'n un' so herabzuwerfen. Walakea erlaubte das, da die Dinger über die ganze Welt verstreut war'n un' jeder, der danach suchte, ein Nest finden konnte un' die herbeirufen könnte, wenn er sie brauchte.
 
-Matt mochte dieses Treiben überhaupt nich' un' wollte, dass Obed sich von der Insel fernhielt, doch der Käp'n war scharf auf Profit un' fand raus, dass er die Golddinger für'n Spottpreis bekommen konnte, so dass es sich lohn'n würde, sich darauf zu spezialisier'n. Die Dinge liefen so für Jahre un' Obed bekam genug von dem Goldzeug, dass er die Raffinerie in Waite's alter, verkommener Walkmühle aufmachen konnte. Er hat's nie gewagt, die Stücke zu verkaufen wie sie war'n, weil die Leute sonst ständig Fragen stell'n würd'n. So oder so kamen seine Matrosen manchmal an so'n Stück un' wur'n das hie un' da los, obwohl sie geschwor'n hatten, Ruhe zu halten. Un' er hat die Frau'n in seiner Familie 'n paar von den Stücken, die für  Menschen passender aussah'n als die meisten, tragen lassen.
+Matt mochte dieses Treiben überhaupt nich' un' wollte, dass Obed sich von der Insel fern hielt, doch der Käp'n war scharf auf Profit un' fand raus, dass er die Golddinger für'n Spottpreis bekommen konnte, so dass es sich lohn'n würde, sich darauf zu spezialisier'n. Die Dinge liefen so für Jahre un' Obed bekam genug von dem Goldzeug, dass er die Raffinerie in Waite's alter, verkommener Walkmühle aufmachen konnte. Er hat's nie gewagt, die Stücke zu verkaufen wie sie war'n, weil die Leute sonst ständig Fragen stell'n würd'n. So oder so kamen seine Matrosen manchmal an so'n Stück un' wur'n das hie un' da los, obwohl sie geschwor'n hatten, Ruhe zu halten. Un' er hat die Frau'n in seiner Familie 'n paar von den Stücken, die für  Menschen passender aussah'n als die meisten, tragen lassen.
 
 Un' dann, ungefähr Achtun'dreißig als ich sieben war --- fand Obed das ganze Inselvolk von einer Reise auf die nächste ausgelöscht. Schien als hätten die and'ren Inselvölker Wind davon bekomm'n was da vor sich ging un' hatten sich der Sache selbst angenomm', Ich glaub' die hatten doch welche von den alten magischen Zeichen von den'n die Seeviecher sagten, dass sie davor als einziges Angst hatt'n. Nich auszudenken was diese Kanaken sich alles zu schnappen trauen, wenn der Meeresboden 'ne Insel hervortreibt mit Ruinen, die älter sin' als die Sintflut. War'n andächtige Typen, denn sie ha'n nix stehen gelassen, weder auf der Hauptinsel noch auf der klein'n Vulkaninsel, bis auf die Ruinen, die zu groß war'n um sie abzureißen. An manchen Stellen lag'n kleine Steine verstreut --- wie Schutzzauber --- mit 'nem Symbol drauf, dass sie heute als Hakenkreuz nennen. War'n wohl die Zeichen der Großen Alten. Die Menschen war'n ausgelöscht un' es gab' keine Spur von irgendwelchem Goldzeugs un' keiner der anderen Kanaken wollte ein Wort über die Sache verlier'n. Ha'n sogar geleugnet, dass da jemals Leute auf der Insel gelebt hatt'n.
 
 Das traf Obed natürlich sehr hart, da auch seine sonst'gen Geschäfte schlecht gingen. Es traf auch ganz Innsmouth, denn in den Seefahrertagen fiel der Profit eines Kapitäns auch proportional seiner Crew zu. Die meisten Leute in der Stadt nahm'n die harten Zeiten wie die Schafe hin un' resigniert'n, aber sie waren in einer schlecht'n Situation, denn der Fischfang versiegte un' den Fabrik'n ging's auch nich' gut.
 
-Zu der Zeit begann Obed auf die Leute zu fluchen, weil sie dumme Schafe seien un' zum christlischen Himmel bet'n, der ihnen nix half. Er hat ihnen erzählt, er kenne Leute, die beteten zu Göttern, die das geben, was man wirklich braucht un' wenn genug Männer zu ihm stünden, könnt' er vielleicht gewisse Kräfte anrufen, die jede Menge Fisch un' ein'ges an Gold bringen wür'n. Auf je'n Fall wusst'n die, die auf der \textit{Sumatry Queen} gedient hatten un' die Insel kannt'n, was er meinte un' war'n nich sehr begierig, den Seeviechern von denen sie gehört hatt'n nahe zu komm'n aber die, die nich' wusst'n worum's ging wurd'n von dem, was Obed zu erzählen hatte beeinflusst un' fingen an, ihn zu frag'n, was er tun könne um sie auf den Pfad des Glaubens zu schicken, der ihnen Ergebnisse liefere.\grqq
+Zu der Zeit begann Obed auf die Leute zu fluchen, weil sie dumme Schafe seien un' zum christlich'n Himmel bet'n, der ihnen nix half. Er hat ihnen erzählt, er kenne Leute, die beteten zu Göttern, die das geben, was man wirklich braucht un' wenn genug Männer zu ihm stünden, könnt' er vielleicht gewisse Kräfte anrufen, die jede Menge Fisch un' ein'ges an Gold bringen wür'n. Auf je'n Fall wusst'n die, die auf der \textit{Sumatry Queen} gedient hatten un' die Insel kannt'n, was er meinte un' war'n nich sehr begierig, den Seeviechern von denen sie gehört hatt'n nahe zu komm'n aber die, die nich' wusst'n worum's ging wur'n von dem, was Obed zu erzählen hatte beeinflusst un' fingen an, ihn zu frag'n, was er tun könne um sie auf den Pfad des Glaubens zu schicken, der ihnen Ergebnisse liefere.\grqq
 
 Hier kam der alte Mann ins Stocken, brummelte und verfiel in eine mürrische und besorgte Stille, schaute nervös über seine Schulter und drehte sich dann um um fasziniert das entfernte schwarze Riff anzustarren. Als ich ihn ansprach, antwortete er nicht, da wusste ich, dass ich ihn die Flasche leeren lassen müsste. Das irrsinnige Seemannsgarn, das ich zu hören bekam, interessierte mich ungemein, denn ich wähnte darin eine Art kruder Allegorie, basierend auf der Fremdartigkeit von Innsmouth und ausgearbeitet durch eine Vorstellungskraft, die gleichzeitig kreativ und voll von Fetzen exotischer Legenden ist. Nicht für einen Moment glaubte ich, dass die Geschichte irgendeine haltbare Grundlage besaß, doch nichtsdestoweniger enthielt der Bericht einen Hauch wahren Schreckens. und wenn auch nur durch Verweise auf seltsame Juwelen, die klar der unheilvollen Tiara ähnelten, die ich in Newburyport gesehen hatte. Vielleicht waren diese Ornamente wirklich von irgendeiner absonderlichen Insel gekommen und möglicherweise waren die wilden Geschichten Lügen des verflossenen Obed selbst, statt dieses antiken Saufboldes.
 
@@ -66,13 +66,13 @@ Er stoppte wieder und vom Blick in seinen wässrig blauen Augen ausgehend befür
 
 Die wässrig blauen Augen wirkten jetzt fast grausam und wahnsinnig und der dreckige, graue Bart sträubte sich wie elektrisiert. Der alte Zadok hatte wohl mitbekommen, wie ich zurücksank, denn er begann bösartig zu kichern.
 
-\glqq Hehehehe! Beginnst langsam, zu versteh'n, was? Vielleicht hätt'st Du gern in meiner Haut gesteckt zu der Zeit, als ich die Dinger nachts aus dem Wasser kommen sah, aus der Dachkuppel auf meinem Haus. Oh, ich kann dir sagen, die kleinen Biester haben große Ohren un' ich hab' nix von dem verpasst, was über Käp'n Obed un' die Leute draußen am Riff getuschelt wurd'. Hehehe! Was is' mit der Nacht, als ich meenes Vater's Fernrohr mit in die Kuppel genommen hatt' un' das Riff voll mit Gestalten gesehen hab', die von der fernen Seite ins tiefe Wasser getaucht un' nie hochgekommen sind... Wie würdest Du das finden, als kleiner Knirps oben in der Kuppel Gestalten zu beobachten, die nicht menschlich aussahen? .... Na? ....Hehehehe....\grqq
+\glqq Hehehehe! Beginnst langsam, zu versteh'n, was? Vielleicht hätt'st Du gern in meiner Haut gesteckt zu der Zeit, als ich die Dinger nachts aus dem Wasser kommen sah, aus der Dachkuppel auf meinem Haus. Oh, ich kann dir sagen, die kleinen Biester haben große Ohren un' ich hab' nix von dem verpasst, was über Käp'n Obed un' die Leute draußen am Riff getuschelt wurd'. Hehehe! Was is' mit der Nacht, als ich meines Vater's Fernrohr mit in die Kuppel genommen hatt' un' das Riff voll mit Gestalten gesehen hab', die von der fernen Seite ins tiefe Wasser getaucht un' nie hochgekommen sind... Wie würdest Du das finden, als kleiner Knirps oben in der Kuppel Gestalten zu beobachten, die nicht menschlich aussahen? .... Na? ....Hehehehe....\grqq
 
 Der alte Mann wurde hysterisch und ich begann vor unbenannter Furcht zu erzittern. Er legte eine knorrige Klaue auf meine Schulter und mir schien, dass ihr Zittern ganz und gar nicht von Heiterkeit geprägt war.
 
-\glqq Angenomm'n, eines Nachts siehste, wie was schweres jenseits des Riffs von Obeds Dory gehievt wird un' am nächsten Tag hörst Du, dass ein junger Kerl vermisst wird? Na? Hat jemals jemand nochmal die geringste Spur von Hiram Gilman gefunden? Haben sie? Un' Nick Pierce un' Luelly Waite un' Adoniram Southwick un' Henry Garrison? Na? Hehehehe... die Gestalten sprachen Zeichensprache mit ihren Händen.... die, die richtige Hände hatten...
+\glqq Angenomm'n, eines Nachts siehste, wie was schweres jenseits des Riffs von Obeds Dory gehievt wird un' am nächsten Tag hörst Du, dass ein junger Kerl vermisst wird? Na? Hat jemals jemand nochmal die geringste Spur von Hiram Gilman gefunden? Haben sie? Un' Nick Pierce un' Luelly Waite un' Adoniram Southwick un' Henry Garrison? Na? Hehehehe... die Gestalten sprach'n Zeichensprache mit ihren Händen.... die, die richt'ge Hände hatt'n...
 
-Also Junge, das war die Zeit als Obed langsam wieder auf die Beine kam. Die Leute sahen seine drei Töchter Golddinger tragen, die niemand vorher bei ihnen gesehen hatte und Rauch kam aus dem Schornstein der alten Raffinerie. And're Leute waren auch erfolgreich --- Fisch strömte in Scharen in den Hafen, fertig zum Fang un' weiß der Himmel wie groß die Ladungen waren, die wir nach Newburyport, Arkham und Boston rausschifften. Das war, als Obed die alte Eisenbahnzweigstrecke hierher bauen ließ. Ein paar Fischer aus Kingsport hatten vom Fischfang hier gehört un' kamen in ihren Schaluppen, aber sie gingen alle verschollen. Niemand hat sie je wieder geseh'n. Un' genau dann hatten unsere Leute den Esoterischen Orden des Dagon organisiert un' die Freimaurerhalle von der Golgatha-Kommende dafür gekauft... hehehe! Matt Eliot war'n Freimaurer un' gegen den Verkauf, aber er verschwand genau zu der Zeit.
+Also Junge, das war die Zeit als Obed langsam wieder auf die Beine kam. Die Leute sahen seine drei Töchter Golddinger tragen, die niemand vorher bei ihnen gesehen hatte und Rauch kam aus dem Schornstein der alten Raffinerie. And're Leute waren auch erfolgreich --- Fisch strömte in Scharen in den Hafen, fertig zum Fang un' weiß der Himmel wie groß die Ladungen waren, die wir nach Newburyport, Arkham und Boston rausschifften. Das war, als Obed die alte Eisenbahnzweigstrecke hierher bauen ließ. Ein paar Fischer aus Kingsport hatten vom Fischfang hier gehört un' kamen in ihren Schaluppen, aber sie gingen alle verschollen. Niemand hat sie je wieder geseh'n. Un' genau dann hatten unsere Leute den Esoterischen Orden des Dagon gegründet un' den Freimarurertempel von der Kalvarienloge dafür gekauft... hehehe! Matt Eliot war'n Freimaurer un' gegen den Verkauf, aber er verschwand genau zu der Zeit.
 
 Denk dran, ich sagte nicht, dass Obed die Dinge genauso haben wollte wie auf der Kanakeninsel. Ich glaub' nich', dass er zunächst Vermischung mit denen vorhatte, oder irgendwelche Jungen aufzuziehen, bis es sie zum Wasser zieht. Er wollte das Goldzeug un' war bereit, viel dafür zu zahlen, un' ich glaub' die and'ren war'n für eine Weile zufrieden...
 
@@ -80,28 +80,28 @@ Bis Sechsun'vierzig hatte sich die Stadt ein wenig umgeschaut un' nachgedacht. Z
 
 Zadok zeigte Zeichen von Angst und Erschöpfung und ich ließ ihn eine Weile schweigen, obwohl ich besorgt auf meine Uhr starrte. Die Gezeiten hatten gewechselt und die Flut kam heran. Und das Geräusch der Wellen schien ihn zu erregen. Ich war froh über die Flut, den bei Hochwasser würde der Fischgestank vielleicht nicht so stark sein. Wieder strengte ich mich an um sein Geflüster zu verstehen.
 
-\glqq Jene furchtbare Nacht... ich hab' sie geseh'n... ich war oben in der Kuppel... Scharen von ihnen... Schwärme von ihnen... über's ganze Riff und schwammen den Hafen hoch in den Manuxet... Gott, was in den Straßen von Innsmouth in der Nacht passiert ist... sie ha'n an der Tür gerüttelt aber Pa wollte nicht aufmach'n... dann isser aus dem Küch'nfenster gestiegen mit seiner Muskete um Stadtrat Mowry zu find'n un' zu seh'n, was er tun könnt... Haufen von Toten und Sterbend'n... Schüsse un' Schreie... Geschrei im Ol'Square un' aufm Dorfplatz un' New Church Green... das Gefängnis überrannt... Proklamation... Verrat... haben's die Pest genannt als Menschen kamen un' rausfanden, dass die Hälfte unserer Leute fehlte... niemand über außer den'n, die sich Obed un' den Viechern anschlossen oder sonstwie Ruhe halten... hab' nie wieder was von mei'm Pa gehört...\grqq
+\glqq Jene furchtbare Nacht... ich hab' sie geseh'n... ich war oben in der Kuppel... Scharen von ihnen... Schwärme von ihnen... über's ganze Riff und schwammen den Hafen hoch in den Manuxet... Gott, was in den Straßen von Innsmouth in der Nacht passiert ist... sie ha'n an der Tür gerüttelt aber Pa wollte nicht aufmach'n... dann isser aus dem Küch'nfenster gestiegen mit seiner Muskete um Stadtrat Mowry zu find'n un' zu seh'n, was er tun könnt'... Haufen von Toten und Sterbend'n... Schüsse un' Schreie... Geschrei im Ol'Square un' aufm Dorfplatz un' New Church Green... das Gefängnis überrannt... Proklamation... Verrat... haben's die Pest genannt als Menschen kamen un' rausfanden, dass die Hälfte unserer Leute fehlte... niemand über außer den'n, die sich Obed un' den Viechern anschlossen oder sonstwie Ruhe halten... hab' nie wieder was von mei'm Pa gehört...\grqq
 
 Der alte Mann keuchte und schwitzte übermäßig. Sein Griff um meine Schulter festigte sich.
 
 \glqq Am Morgen klärte sich das alles --- aber 's gab Spur'n... Obed übernimmt irg'ndwie das Kommando un' sagt, dass die Dinge sich ändern wer'n... andere wer'n mit uns in der Messe beten und manche Häuser wür'n Gäste bewirten müssen... sie wollten sich mit uns kreuzen wie sie's mit den Kanaken getan haben un' er hatte nich' vor, sie aufzuhalten. So weit trieb es Obed.... wie'n Verrückter in der Sache. Er sagte sie hätt'n uns Fisch un' Schätze gebracht un' sollt'n dafür hab'n, wonach es ihnen verlangt...
 
-Äußerlich hatte sich nix verändert, nur sollt'n wir uns von Fremd'n fernhalten wenn wir wüssten, was gut für uns sei. Wir alle musst'n den Eid des Dagon ablegen un' später gab's 'n zweiten un' 'n dritten Eid, die ein paar von uns ablegten. Die, die im Speziellen halfen un' im Gegenzug spezielle Belohnungen --- Gold un' so weiter --- Keine Widerrede, denn da sin' Millionen von denen da unt'n. Die wollen eigentlich nicht hochsteigen un' die Menschheit auslöschen, aber wenn sie verraten un' dazu gezwungen würden, könnten sie in die Richtung einiges tun. Wir hatten nich die alten Zauber um sie abzuschneiden wie die Leut' in der Südsee un' die Kanaken hatten ihre Geheimnisse nie preis gegeb'n.
+Äußerlich hatte sich nix verändert, nur sollt'n wir uns von Fremd'n fern halten wenn wir wüssten, was gut für uns sei. Wir alle musst'n den Eid des Dagon ablegen un' später gab's 'n zweiten un' 'n dritten Eid, die ein paar von uns ablegten. Die, die im Speziellen halfen un' im Gegenzug spezielle Belohnungen --- Gold un' so weiter --- Keine Widerrede, denn da sin' Millionen von denen da unt'n. Die wollen eigentlich nicht hochsteigen un' die Menschheit auslöschen, aber wenn sie verraten un' dazu gezwungen würden, könnten sie in die Richtung einiges tun. Wir hatten nich' die alten Zauber um sie abzuschneiden wie die Leut' in der Südsee un' die Kanaken hatten ihre Geheimnisse nie preis gegeb'n.
 
-Brachten wir genug Opfer un' wilden Krimskrams hervor un' gewährten Herberge in der Stadt wenn sie's wollt'n, ließen sie uns die meiste Zeit in Ruhe. Sollt'n uns nich mit Fremd'n abgegeb'n, damit die keine Geschicht'n nach außen trag'n --- allerdings, wurden sie so neugierig. Alles in der Mitte der Gläubig'n --- des Ordens von Davon --- un' die Kinder wür'n niemals sterb'n, sondern zurück zu Mutter Hydra un' Vater Dagon wo wir einst alle herkammen --- \textit{Ia! Ia! Cthulhu fhtagn! Ph’nglui mglw’nafh Cthulhu R’lyeh wgah-nagl fhtagn} ---
+Brachten wir genug Opfer un' wilden Krimskrams hervor un' gewährten Herberge in der Stadt wenn sie's wollt'n, ließen sie uns die meiste Zeit in Ruhe. Sollt'n uns nich' mit Fremd'n abgegeb'n, damit die keine Geschicht'n nach außen trag'n --- allerdings, wurden sie so neugierig. Alles in der Mitte der Gläubig'n --- des Ordens von Davon --- un' die Kinder wür'n niemals sterb'n, sondern zurück zu Mutter Hydra un' Vater Dagon wo wir einst alle herkamen --- \textit{Ia! Ia! Cthulhu fhtagn! Ph’nglui mglw’nafh Cthulhu R’lyeh wgah-nagl fhtagn} ---
 \grqq
 
 Der alte Zadok verfiel komplett in Raserei und ich hielt meinen Atem an. Arme alte Seele --- zu welchen jämmerlichen Tiefen der Halluzination hatten Alkohol und sein Hass auf Verfall, Fremde und Krankheit um ihn herum dieses fruchtbare, phantasievolle Hirn gebracht! Er fing nun an zu stöhnen und Tränen rannen seine zerfurchten Wangen herunter in seinen Bart.
 
-\glqq Gott, was ich geseh'n hab' seit mei'm fünfzehnten Lebensjahr --- Mene, mene, tekel, upharsin! --- Die vermissten Leute un' die, die sich umgebracht hab'n --- die, die davon in Arkham oder Ipswich erzählt hab'n wur'n alle verrücjt genannt, genau so wie Du mich das jetzt nennst --- aber bei Gott, was ich geseh'n hab' --- Sie hätt'n mich schon lange umgebracht, weg'n all dem was ich weiß, aber ich hab' den ersten un' den zweiten Eid des Dagon bei Obed abgelegt un' bin geschützt, bis ein Schwurgericht aus denen beweist, dass ich wissentlich un' vorsätzlich was erzähl hab'... aber ich würde nie den dritten Eid ablegen --- ich würde lieber sterben als den abzuleg'n ---
+\glqq Gott, was ich geseh'n hab' seit mei'm fünfzehnten Lebensjahr --- Mene, mene, tekel, upharsin! --- Die vermissten Leute un' die, die sich umgebracht hab'n --- die, die davon in Arkham oder Ipswich erzählt hab'n wur'n alle verrückt genannt, genau so wie Du mich das jetzt nennst --- aber bei Gott, was ich geseh'n hab' --- Sie hätt'n mich schon lange umgebracht, weg'n all dem was ich weiß, aber ich hab' den ersten un' den zweiten Eid des Dagon bei Obed abgelegt un' bin geschützt, bis ein Schwurgericht aus denen beweist, dass ich wissentlich un' vorsätzlich was erzähl hab'... aber ich würde nie den dritten Eid ablegen --- ich würde lieber sterben als den abzuleg'n ---
 
-Es wurde schlimmer zur Zeit des Bürgerkriegs, als die Kinder, die seit Sechsun'vierzig gebor'n worden war'n aufwuchsen --- ein'ge von ihnen zumindest. Ich hatte Angst --- hab' nie mehr gebetet seit der furchtbaren Nacht un' niemals einen von --- den'n --- aus der Nähe geseh'n in meinem ganzen Leben. Das heißt, zumindes' nie 'n Vollblut. Ich bin in den Krieg gezogen un' wenn ich den Mut oder Verstand gehabt hätte, wär' ich nie wieder gekomm', sondern hätte mich weit weg von hier niedergelassen. Aber Leute shrieben mir, es wär nich' so schlimm. Das, denk ich, war weil Rekrutierungsleute von der Regierung seit Dreiun'sechzig in der Stadt war'n. Nach'm Krieg war's wieder genau so schlimm wie vorher. Die Einwohnerzahl nahm ab --- Fabriken un' Läden schloss'n --- die Schifffahrt ging ein un' der Hafen verstopfte --- die Eisenbahn wurd' aufgegeb'n --- aber die... die hört'n nie auf, den Fluss auf und abzuschwimmen von dem verfluchten Teufelsriff aus --- un' mehr un' mehr Dachfenster wurd'n verbarrikadiert un' mehr un mehr Geräusche war'n in Häusern zu hör'n in denen eigentlich keiner wohn'n sollte...
+Es wurde schlimmer zur Zeit des Bürgerkriegs, als die Kinder, die seit Sechsun'vierzig gebor'n worden war'n aufwuchsen --- ein'ge von ihnen zumindest. Ich hatte Angst --- hab' nie mehr gebetet seit der furchtbaren Nacht un' niemals einen von --- den'n --- aus der Nähe geseh'n in meinem ganzen Leben. Das heißt, zumindes' nie 'n Vollblut. Ich bin in den Krieg gezogen un' wenn ich den Mut oder Verstand gehabt hätte, wär' ich nie wieder gekomm', sondern hätte mich weit weg von hier niedergelassen. Aber Leute schrieben mir, es wär nich' so schlimm. Das, denk ich, war weil Rekrutierungsleute von der Regierung seit Dreiun'sechzig in der Stadt war'n. Nach'm Krieg war's wieder genau so schlimm wie vorher. Die Einwohnerzahl nahm ab --- Fabriken un' Läden schloss'n --- die Schifffahrt ging ein un' der Hafen verstopfte --- die Eisenbahn wurd' aufgegeb'n --- aber die... die hört'n nie auf, den Fluss auf und abzuschwimmen von dem verfluchten Teufelsriff aus --- un' mehr un' mehr Dachfenster wurd'n verbarrikadiert un' mehr un mehr Geräusche war'n in Häusern zu hör'n in denen eigentlich keiner wohn'n sollte...
 
 Die Leute drauß'n hab'n ihre Geschichten über uns --- ich denke, Du hast 'ne Menge davon gehört, nach deinen Fragen zu urteil'n --- Geschichten über Dinge, die sie hier un' da geseh'n hab'n un' über den seltsam'n Schmuck der immer noch von ir'ndwo her kommt un' von dem doch nich' alles eingeschmolz'n wird --- aber nix wird je konkret. Niemand will nix glaub'n. Sie sagn' das Goldzeugs sei Piratenbeute un' alle Innsmouther hab'n fremdes Blut, sin' missgestimmt oder ir'ndwas. Außerdem verscheuchen die, die hier leb'n so viele Fremde wie sie nur könn' un' bestärken den Rest darin, nich' sehr neugierig zu wer'n, ganz speziell nachts. Die Viecher mochten keine Tiere --- Pferde scheut'n, un' die Maultiere --- aber als Autos aufkamen, hat sich das gelegt.
 
 Sechsun'vierzig nahm Käp'n Obed eine zweite Frau, die niemand in der Stadt je geseh'n hat --- manche sag'n er wollte nich' aber wurde von den', die er geruf'n hatte gezwung'n --- hatte drei Kinder mit ihr --- zwei sind jung verschwund'n aber ein Mäd'l wurd' zur Ausbildung nach Europa geschickt. Obed hat sie schließlich durch 'n Trick mit 'nem Kerl aus Arkham verheiratet, der nix davon ahnte. Aber jetz' hat niemand da draußen mehr mit den Innsmouthern zu tun. Barnabas Marsh, der die Raffinerie jetz' betreibt is' Obeds Enkel von seiner ersten Frau --- Sohn von Onesiphorus, seinem ältesten Sohn aber seine Mutter war auch eine von den' un' nie draußen geseh'n word'n.
 
-Mittlerweile hat sich Barnabas verändert. Kann die Aug'n nich' mehr schließen un' is ganz aus der Form. Es heißt, er trägt immer noch Kleider aber ihn wird's bald zum Wasser zieh'n. Vielleicht hat er's schon versucht --- sie tauchen manchmal für'n Weilchen darunter bevor sie endgültig verschwind'n. Wurde seit fast zehn Jahr'n nich' in der Öffentlichkeit geseh'n. Weiß nich, wie's seiner armen Frau geht --- sie kommt aus Ipswich un' sie haben Barnabas fast gelyncht als er ihr vor ungefähr fünfzig Jahr'n den Hof gemacht hat. Obed is' Achtun'siebzig gestorben un' die Generation danach is nun weg --- die Kinder der erst'n Frau tot un' der Rest... das weiß nur Gott...
+Mittlerweile hat sich Barnabas verändert. Kann die Aug'n nich' mehr schließen un' is ganz aus der Form. Es heißt, er trägt immer noch Kleider aber ihn wird's bald zum Wasser zieh'n. Vielleicht hat er's schon versucht --- sie tauchen manchmal für'n Weilchen darunter bevor sie endgültig verschwind'n. Wurde seit fast zehn Jahr'n nich' in der Öffentlichkeit geseh'n. Weiß nich', wie's seiner armen Frau geht --- sie kommt aus Ipswich un' sie haben Barnabas fast gelyncht als er ihr vor ungefähr fünfzig Jahr'n den Hof gemacht hat. Obed is' Achtun'siebzig gestorben un' die Generation danach is nun weg --- die Kinder der erst'n Frau tot un' der Rest... das weiß nur Gott...
 \grqq
 
  Das Rauschen der herannahenden Flut war jetzt unglaublich eindringlich und nach und nach schien dies die Laune des alten Mannes von rührseliger Traurigkeit zu aufmerksamer Furcht zu verändern. Er pausierte dann und wann um erneut nervöse Blicke über seine Schulter oder raus zum Riff zu werfen und trotz der Absurdität seiner Erzählung begann ich, seine ungewisse Besorgnis zu teilen. Zadok wurde nun schriller und schien seinen Mut durch einen lauteren Ton zu sammeln.
@@ -119,7 +119,7 @@ Willste den wahren Schrecken erfahren, was? Also, das is' so --- es is' nich', w
 Hey, hörst Du mich? Ich sag dir, ich weiß was die Dinger sin' --- ich hab' sie eines Nachts gesehen als... EEEH --- AAHHHHH! YAAAAAHH...
 \grqq
 
-Die abscheuliche Plötzlichkeit und das unmenschliche Grauen des alten Mannes' Schreies ließ mich fast ohnmächtig werden. Seine Augen, an mir vorbei auf die übelriechende See starrend, schienen förmlich aus seinem Kopf zu springen während sein Gesicht sich zu einer Maske der Furcht, einer griechischen Tragödie werd verzog. Seine knochige Klaue grub sich in meine Schulter und er bewegte sich nicht als ich einen Kopfdrehte um zu sehen, was er erblickt hatte.
+Die abscheuliche Plötzlichkeit und das unmenschliche Grauen des alten Mannes' Schreies ließ mich fast ohnmächtig werden. Seine Augen, an mir vorbei auf die übelriechende See starrend, schienen förmlich aus seinem Kopf zu springen während sein Gesicht sich zu einer Maske der Furcht, einer griechischen Tragödie werd verzog. Seine knochige Klaue grub sich in meine Schulter und er bewegte sich nicht als ich meinen Kopf drehte um zu sehen, was er erblickt hatte.
 
 Da war für mich nichts zu sehen. Nur die herankommende Flut, die vielleicht ein Kräuseln näher kam als die entlegenen Brecher. Doch Zadok schüttelte mich und ich drehte mich zurück um das vor Furcht erstarrte Gesicht in ein Chaos aus zuckenden Augenbrauen und murmelnden, zahnlosen Kiefern. Bald kehrte seine Stimme zurück --- jedoch als ein wimmerndes Flüstern.
 
